# fastapi-template

./: .dockerignore  .env  .gitignore  README.md  api_guide.py  backend.dockerfile  cli.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py  test.py
app/api/: deps.py
app/api/api_v1/endpoints/: items.py  login.py  users.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  crud_item.py  crud_refresh_session.py  crud_user.py
app/db/: init_db.py
app/forms/: __init__.py  password.py
app/models/: item.py  refresh_session.py  user.py
app/schemas/: __init__.py  item.py  refresh_session.py  token.py
backend/: .dockerignore  api_guide.py  backend.dockerfile
backend/app/: pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: 9df046c5f96a_init.py
backend/app/app/: main.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: items.py  users.py
backend/app/app/core/: config.py
backend/app/app/crud/: base.py  crud_refresh_session.py
backend/app/app/db/: base.py  base_class.py  init_db.py
backend/app/app/models/: __init__.py  item.py  refresh_session.py  user.py
backend/app/app/schemas/: refresh_session.py  token.py
backend/app/scripts/: start.sh
cli_res/: requirements.txt  utils.py
